<resources>
    <string name="app_name">MedPack</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_main_activity">Main Activity</string>
    <string name="home_page">Book Appointment</string>
    <string name="medication">Your Prescriptions</string>
    <string name="records">Your Records</string>
    <string name="events">Search Events</string>
    <string name="update_profile">Update Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="appbar_scrolling_view_behavior">Scrolling Behaviour</string>

    <string-array name="citizenship">
        <item>Singapore Citizen</item>
        <item>Permanent Resident</item>
        <item>Foreigner</item>
    </string-array>

    <string-array name="maritalstatus">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Separated</item>
        <item>Widowed</item>
    </string-array>

    <string-array name="race">
        <item>Chinese</item>
        <item>Malay</item>
        <item>Indian</item>
        <item>Eurasian</item>
        <item>Others</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Mandarin Chinese</item>
        <item>Bahasa Melayu</item>
        <item>Tamil</item>
    </string-array>

    <string-array name="chas">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="painScale1">1</string>
    <string name="painScale2">2</string>
    <string name="painScale3">3</string>
    <string name="painScale4">4</string>
    <string name="painScale5">5</string>
</resources>
