<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_page" />
        <item
            android:id="@+id/update_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="Update Profile" />

        <!--<item
            android:id="@+id/medication_scheduler"
            android:icon="@drawable/ic_local_pharmacy_black_24dp"
            android:title="@string/medication" />-->

        <item
            android:id="@+id/show_records"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/records" />
        <item
            android:id="@+id/search_events"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/logoutAccount"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="Logout" />
    </group>
</menu>